# rustral

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  IMPROVEMENT_PLAN.md  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  SECURITY.md  install.sh  run_tests.sh  rustfmt.toml
.github/: pull_request_template.md
.jules/: bolt.md
benchmarks/: RESULTS_SUMMARY_EMNLP.md  SCHEMA.md  jax_baselines.py  manifest_schema.json  (+4 more)
crates/autodiff/: Cargo.toml  README.md
crates/autodiff/examples/: train_demo.rs
crates/autodiff/src/: checkpoint.rs  lib.rs
crates/autodiff/tests/: finite_diff_gradient.rs  finite_difference.rs
crates/autotuner/: Cargo.toml  README.md
crates/autotuner/src/: cache.rs  kernel_config.rs  lib.rs  search.rs  tuner.rs
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: attention.rs  conv2d.rs  fusion.rs  lstm_forward.rs  matmul.rs
crates/bench/src/: lib.rs
crates/bench/tests/: workload_bins.rs
crates/candle-backend/: Cargo.toml  README.md
crates/candle-backend/examples/: benchmark.rs  nanogpt.rs
crates/candle-backend/src/: lib.rs
crates/candle-backend/tests/: cuda_smoke.rs
crates/core/: Cargo.toml  README.md
crates/core/examples/: custom_layer.rs
crates/core/src/: backend.rs  context.rs  error.rs  fusion.rs  fusion_tests.rs  lib.rs  memory_profiler.rs  module.rs  numerics.rs  operation_profiler.rs  parameter.rs  shape.rs  shape_policy.rs  tensor_pool.rs  tolerance.rs
crates/core/tests/: cross_backend_optimization.rs  fusion_validation.rs  golden_microblock_ops.rs  named_parameter_utils.rs  numeric_policy_smoke.rs  profiler_snapshot.rs
crates/core/tests/common/: mod.rs  numeric.rs
crates/core/tests/golden/: golden_attention.rs  golden_mlp.rs  golden_transformer_layer.rs  mod.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: datasets.rs  fetch.rs  lib.rs  tokenizer.rs
crates/data/src/datasets/: sst2.rs  wikitext2.rs
crates/distributed/: Cargo.toml  README.md
crates/distributed/examples/: mpi_dp_cpu.rs
crates/distributed/src/: chaos_engineering.rs  checkpoint.rs  compression.rs  context_parallel.rs  device_mesh.rs  fault_tolerance.rs  fsdp.rs  lib.rs  nccl.rs  parallelism_3d.rs  pipeline_parallel.rs  sequence_parallel.rs  tensor_parallel.rs  zero.rs  zero_infinity.rs
crates/distributed/tests/: distributed_test.rs
crates/gguf/: Cargo.toml
crates/gguf/src/: lib.rs
crates/hf/: Cargo.toml  README.md
crates/hf/src/: lib.rs
crates/inference-server/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
crates/inference-server/src/: llama_main.rs  main.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: causal_lm.rs  checkpoint_f32.rs  gpt2.rs  lib.rs  main.rs
crates/llm/src/gpt2/: hf_weights.rs
crates/llm/src/llama/: hf_weights.rs  mod.rs
crates/llm/tests/: hf_gpt2_real_load_smoke.rs  hf_smoke.rs  llama_fixture_integration.rs  llama_hf_real_load_smoke.rs  llama_ndarray_candle_parity.rs  llama_transformers_golden_parity.rs  tokenizer.rs  transformer_decoder_ndarray_candle_parity.rs
crates/llm/tests/fixtures/tiny_llama/: config.json  transformers_golden_logits.json
crates/metrics/: Cargo.toml  README.md
crates/metrics/src/: lib.rs
crates/model-zoo/: Cargo.toml  README.md  registry.json
crates/model-zoo/src/: lib.rs
crates/ndarray-backend/: Cargo.toml  README.md
crates/ndarray-backend/src/: lib.rs  tabular_tests.rs
crates/nn/: Cargo.toml  README.md  TRANSFORMERS.md
crates/nn/examples/: bert_fine_tuning.rs  building_blocks.rs  char_rnn.rs  diffusion_model.rs  gpt_training.rs  linear_readout.rs  mnist.rs  moe_training.rs  resnet_image_classification.rs  training_smoke.rs  transformer_bert_encoder.rs  transformer_composition.rs  transformer_gpt_decoder.rs  transformer_seq2seq.rs  xor.rs
crates/nn/src/: attention.rs  continuous_batching.rs  conv.rs  dropout.rs  embedding.rs  expert_choice.rs  fusion_helper.rs  kv_cache.rs  lib.rs  linear.rs  llama.rs  loss.rs  lstm.rs  moe.rs  multi_readout.rs  normalization.rs  quantization.rs  readout.rs  sequential.rs  shared_expert.rs  tape.rs  tape_transformer.rs  transformer.rs
crates/nn/tests/: named_parameters_stability.rs  tape_embedding.rs  tape_ffn_eager_parity.rs  tape_layer_norm.rs  tape_linear.rs  tape_linear_activation.rs  tape_transformer_block.rs
crates/onnx-export/: Cargo.toml  README.md  build.rs
crates/onnx-export/src/: lib.rs
crates/optim/: Cargo.toml  README.md
crates/optim/src/: lib.rs  lr_scheduler.rs  mixed_precision.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/examples/: advanced_optimizations.rs  backend_agnostic_fusion.rs  emnlp_char_lm.rs  memory_layout_optimization.rs  mixed_precision_training.rs  nlp_dependency_parsing.rs  nlp_embeddings.rs  nlp_ner.rs  save_linear_artifact.rs  sst2_classifier.rs  tabular_decision_tree.rs  tabular_knn.rs  tape_train_demo.rs  tape_xor_classification.rs  wikitext2_lm.rs
crates/runtime/src/: high_level_trainer.rs  inference.rs  lib.rs  model_io.rs  serious_training.rs  tape_trainer.rs  trainer.rs  tui_hook.rs
crates/runtime/tests/: backend_correctness.rs  emnlp_demo_smoke.rs  model_io_negative.rs  model_io_path_roundtrip.rs  model_io_roundtrip.rs  sst2_overfit.rs  sst2_smoke.rs  wikitext2_lm_smoke.rs  wikitext2_overfit.rs
crates/symbolic/: Cargo.toml  README.md
crates/symbolic/src/: lib.rs
crates/tui/: Cargo.toml  README.md
crates/tui/examples/: train_dashboard.rs
crates/tui/src/: lib.rs
crates/wgpu-backend/: Cargo.toml  README.md
crates/wgpu-backend/src/: lib.rs  profiler.rs  shaders.wgsl
crates/wgpu-backend/tests/: correctness.rs
examples/: Cargo.toml  README.md
examples/advanced/: custom_layer.rs  moe_training.rs
examples/basics/: char_rnn.rs  mnist.rs  train_demo.rs  xor.rs
examples/nlp/: bert_fine_tuning.rs  gpt_training.rs  nanogpt.rs
examples/src/: char_rnn.rs  main.rs  mnist.rs  train_demo.rs  xor.rs
examples/vision/: building_blocks.rs  diffusion_model.rs  resnet_image_classification.rs
(+75 files in other folders)
