[package]
name = "rustral"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Rustral workspace root — integration tests and umbrella crate for the neural network framework"

[lints]
workspace = true

[features]
default = []
cuda = ["rustral-candle-backend/cuda"]
metal = ["rustral-candle-backend/metal"]

[dependencies]
rustral-core = { path = "crates/core", version = "0.1.0" }
rustral-ndarray-backend = { path = "crates/ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "crates/nn", version = "0.1.0" }
rustral-data = { path = "crates/data", version = "0.1.0" }
rustral-autodiff = { path = "crates/autodiff", version = "0.1.0" }
rustral-optim = { path = "crates/optim", version = "0.1.0" }
rustral-runtime = { path = "crates/runtime", version = "0.1.0" }
rustral-tui = { path = "crates/tui", version = "0.1.0" }
rustral-distributed = { path = "crates/distributed", version = "0.1.0" }
rustral-symbolic = { path = "crates/symbolic", version = "0.1.0" }
rustral-metrics = { path = "crates/metrics", version = "0.1.0" }
rustral-autotuner = { path = "crates/autotuner", version = "0.1.0" }
rustral-io = { path = "crates/io", version = "0.1.0" }
rustral-hf = { path = "crates/hf", version = "0.1.0" }
rustral-candle-backend = { path = "crates/candle-backend", version = "0.1.0" }

[dev-dependencies]
rand = { workspace = true }

[workspace]
members = [
    "crates/core",
    "crates/ndarray-backend",
    "crates/symbolic",
    "crates/nn",
    "crates/runtime",
    "crates/io",
    "crates/optim",
    "crates/autodiff",
    "crates/wgpu-backend",
    "crates/data",
    "crates/bench",
    "crates/distributed",
    "crates/metrics",
    "crates/tui",
    "crates/autotuner",
    "crates/hf",
    "crates/candle-backend",
    "crates/model-zoo",
    "crates/inference-server",
    "crates/onnx-export",
]
resolver = "2"

[workspace.lints.clippy]
manual_div_ceil = "allow"
type_complexity = "allow"
needless_range_loop = "allow"
needless_borrow = "allow"
useless_conversion = "allow"
single_component_path_imports = "allow"
unused_enumerate_index = "allow"
redundant_closure = "allow"
unnecessary_lazy_evaluations = "allow"
if_same_then_else = "allow"
collapsible_match = "allow"
single_match = "allow"
unnecessary_cast = "allow"
manual_clamp = "allow"
match_like_matches_macro = "allow"
new_without_default = "allow"
same_item_push = "allow"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
authors = ["Rustral Contributors"]
repository = "https://github.com/skumyol/rustral"
keywords = ["machine-learning", "neural-network", "deep-learning", "tensor", "autodiff"]
categories = ["science", "mathematics"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
criterion = "0.5"
safetensors = "0.4"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

 
