[package]
name = "mnr-examples"
version = "0.1.0"
edition = "2021"

[workspace]

# Basic Examples - Learning fundamentals
[[bin]]
name = "xor"
path = "basics/xor.rs"

[[bin]]
name = "train_demo"
path = "basics/train_demo.rs"

[[bin]]
name = "mnist"
path = "basics/mnist.rs"

[[bin]]
name = "char_rnn"
path = "basics/char_rnn.rs"

# Vision Examples - Computer vision and image processing
[[example]]
name = "building_blocks"
path = "vision/building_blocks.rs"

[[example]]
name = "resnet_image_classification"
path = "vision/resnet_image_classification.rs"

[[example]]
name = "diffusion_model"
path = "vision/diffusion_model.rs"

# NLP Examples - Natural language processing
[[example]]
name = "bert_fine_tuning"
path = "nlp/bert_fine_tuning.rs"

[[example]]
name = "gpt_training"
path = "nlp/gpt_training.rs"

# Advanced Examples - Complex architectures and techniques
[[example]]
name = "moe_training"
path = "advanced/moe_training.rs"

[[example]]
name = "custom_layer"
path = "advanced/custom_layer.rs"

[dependencies]
mnr-core = { path = "../crates/core" }
mnr-ndarray-backend = { path = "../crates/ndarray-backend" }
mnr-nn = { path = "../crates/nn" }
mnr-autodiff = { path = "../crates/autodiff" }
mnr-optim = { path = "../crates/optim" }
mnr-data = { path = "../crates/data" }
mnr-distributed = { path = "../crates/distributed" }
mnr-runtime = { path = "../crates/runtime" }
mnr-symbolic = { path = "../crates/symbolic" }
rand = "0.8"
