[package]
name = "rustral-examples"
version = "0.1.0"
edition = "2021"
publish = false
description = "Pointer crate. The real, working examples live under crates/runtime/examples/."

[workspace]

# Single placeholder binary so `cargo build --manifest-path examples/Cargo.toml --workspace`
# compiles cleanly. The actual examples live in `crates/runtime/examples/` and are built via
# `cargo run -p rustral-runtime --features training --example <name>` (see examples/README.md).
[[bin]]
name = "rustral_examples_pointer"
path = "src/main.rs"

[features]
default = []
cuda = ["rustral-candle-backend/cuda"]
metal = ["rustral-candle-backend/metal"]

[dependencies]
rustral-core = { path = "../crates/core", version = "0.1.0" }
rustral-ndarray-backend = { path = "../crates/ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../crates/nn", version = "0.1.0" }
rustral-autodiff = { path = "../crates/autodiff", version = "0.1.0" }
rustral-optim = { path = "../crates/optim", version = "0.1.0" }
rustral-data = { path = "../crates/data", version = "0.1.0" }
rustral-distributed = { path = "../crates/distributed", version = "0.1.0" }
rustral-runtime = { path = "../crates/runtime", version = "0.1.0", features = ["training", "tui"] }
rustral-symbolic = { path = "../crates/symbolic", version = "0.1.0" }
rustral-candle-backend = { path = "../crates/candle-backend", version = "0.1.0" }
