[package]
name = "mnr-autodiff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

description = "Automatic differentiation for MNR (reverse-mode autodiff)"

[dependencies]
mnr-core = { path = "../core" }

thiserror = { workspace = true }

[dev-dependencies]
mnr-ndarray-backend = { path = "../ndarray-backend" }
mnr-nn = { path = "../nn" }
