[package]
name = "rustral-autodiff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

description = "Reverse-mode automatic differentiation for Rustral"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }

thiserror = { workspace = true }

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
