[package]
name = "mnr-autotuner"
version = "0.1.0"
edition = "2021"
description = "Auto-tuner for kernel configuration and performance optimization"
license = "MIT OR Apache-2.0"

[dependencies]
mnr-core = { path = "../core" }
mnr-wgpu-backend = { path = "../wgpu-backend" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.8"
dirs = "5.0"

[dev-dependencies]
mnr-ndarray-backend = { path = "../ndarray-backend" }
