[package]
name = "rustral-autotuner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Kernel configuration autotuning for Rustral GPU backends"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-wgpu-backend = { path = "../wgpu-backend", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rayon.workspace = true
dirs = "5.0"

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
