[package]
name = "rustral-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Criterion benchmarks for Rustral tensor and layer operations"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
criterion = { workspace = true }

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "conv2d"
harness = false

[[bench]]
name = "lstm_forward"
harness = false

[[bench]]
name = "attention"
harness = false
