[package]
name = "rustral-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Benchmarking harness and workload runners for Rustral"

[lints]
workspace = true

[features]
default = []
cuda = ["rustral-candle-backend/cuda"]
metal = ["rustral-candle-backend/metal"]

[dependencies]
rustral-symbolic = { path = "../symbolic", version = "0.1.0" }
rustral-core = { path = "../core", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-candle-backend = { path = "../candle-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
rustral-autodiff = { path = "../autodiff", version = "0.1.0" }
rustral-optim = { path = "../optim", version = "0.1.0" }
rustral-runtime = { path = "../runtime", version = "0.1.0", features = ["training"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
candle-core = "0.10.2"
candle-nn = "0.10.2"
criterion = { workspace = true }
rand = { workspace = true }
