[package]
name = "mnr-candle-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "candle-core backend for MNR (CPU and CUDA support)"

[features]
default = []
cuda = ["candle-core/cuda"]

[dependencies]
mnr-core = { path = "../core" }
candle-core = "0.10"
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
