[package]
name = "rustral-candle-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "candle-core backend for Rustral (CPU and optional CUDA)"

[lints]
workspace = true

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
candle-core = "0.10.2"
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
