[package]
name = "rustral-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Core tensors, backend abstraction, and the Module trait for Rustral"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lazy_static = "1.4"
