[package]
name = "rustral-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Data loading, batching, and dataset abstractions for Rustral"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rand = { workspace = true, features = ["std_rng"] }
memmap2 = "0.9"

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
