[package]
name = "rustral-distributed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Distributed-style training APIs (single-process simulation today; multi-node MPI/NCCL planned)"

[lints]
workspace = true

[[example]]
name = "mpi_dp_cpu"
path = "examples/mpi_dp_cpu.rs"
required-features = ["mpi"]

[features]
default = []
mpi = ["dep:mpi"]
nccl = []

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-io = { path = "../io", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
rustral-optim = { path = "../optim", version = "0.1.0" }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
rand = { workspace = true }
rayon = { workspace = true, optional = true }

# MPI for distributed training (optional)
mpi = { version = "0.6", optional = true }

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-io = { path = "../io", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
serde_json = "1.0"
tempfile = "3.0"
