[package]
name = "rustral-gguf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Minimal GGUF header / tensor-table reader for Rustral (inspect phase)"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
