[package]
name = "rustral-hf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

description = "Hugging Face Hub download/upload helpers for Rustral models"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-io = { path = "../io", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rustral-nn = { path = "../nn", version = "0.1.0" }
tempfile = "3"
