[package]
name = "rustral-inference-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = false
description = "HTTP JSON inference server for Rustral Safetensors artifacts (MVP)"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
clap = { version = "4", features = ["derive"] }
rustral-core = { path = "../core", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
rustral-runtime = { path = "../runtime", version = "0.1.0", features = ["training"] }
