[package]
name = "rustral-inference-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = false
description = "HTTP JSON inference server for Rustral Safetensors artifacts (MVP)"

[lints]
workspace = true

[features]
default = ["llama-serving"]
llama-serving = [
    "dep:rustral-hf",
    "dep:rustral-io",
    "dep:rustral-llm",
    "rustral-llm/hf-tokenizers",
    "dep:tokio-stream",
]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
clap = { version = "4", features = ["derive"] }
rustral-core = { path = "../core", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }
rustral-runtime = { path = "../runtime", version = "0.1.0", features = ["training"] }
rustral-hf = { path = "../hf", version = "0.1.0", optional = true }
rustral-io = { path = "../io", version = "0.1.0", optional = true }
rustral-llm = { path = "../llm", version = "0.1.0", optional = true }
tokio-stream = { version = "0.1", optional = true }

[[bin]]
name = "rustral-llama-server"
path = "src/llama_main.rs"
required-features = ["llama-serving"]
