[package]
name = "mnr-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

description = "Serialization support for MNR models (Safetensors, etc.)"

[dependencies]
mnr-core = { path = "../core" }

safetensors = "0.4"
serde = { workspace = true }
thiserror = { workspace = true }
bytemuck = { version = "1", features = ["extern_crate_alloc"] }

[dev-dependencies]
mnr-ndarray-backend = { path = "../ndarray-backend" }
