[package]
name = "rustral-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

description = "Safetensors-based serialization and checkpoints for Rustral models"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }

safetensors = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytemuck = { version = "1", features = ["extern_crate_alloc"] }

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
tempfile = "3"
