[package]
name = "rustral-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "LLM inference utilities and CLI for Rustral (experimental)"

[lints]
workspace = true

[features]
default = []
hf-tokenizers = ["dep:tokenizers"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

rustral-core = { path = "../core", version = "0.1.0" }
rustral-io = { path = "../io", version = "0.1.0" }
rustral-hf = { path = "../hf", version = "0.1.0" }
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-candle-backend = { path = "../candle-backend", version = "0.1.0" }
rustral-nn = { path = "../nn", version = "0.1.0" }

tokenizers = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
ahash = "0.8"

[[bin]]
name = "rustral-llm"
path = "src/main.rs"
