[package]
name = "mnr-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mnr-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true

# Optional features for specific backends
[features]
default = ["console"]
console = []
tensorboard = []
wandb = []