[package]
name = "rustral-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Training metrics and experiment logging primitives for Rustral"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

# Optional features for specific backends
[features]
default = ["console"]
console = []
tensorboard = []
wandb = []
