[package]
name = "mnr-ndarray-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["matrixmultiply"]
matrixmultiply = ["dep:matrixmultiply"]
# Enable ARM NEON optimizations when available
neon = ["matrixmultiply?/neon"]

[dependencies]
mnr-core = { path = "../core" }
serde.workspace = true
rand.workspace = true

# matrixmultiply uses optimized BLAS kernels including ARM NEON
matrixmultiply = { version = "0.3", optional = true }
