[package]
name = "rustral-ndarray-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Reference CPU ndarray backend for correctness testing and small models in Rustral"

[lints]
workspace = true

[features]
default = ["matrixmultiply"]
matrixmultiply = ["dep:matrixmultiply"]

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
serde.workspace = true
rand.workspace = true
rayon.workspace = true

# matrixmultiply uses optimized BLAS kernels including ARM NEON
matrixmultiply = { version = "0.3", optional = true }
