[package]
name = "rustral-nn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Neural network layers (CNN, RNN, Transformer, MoE, …) for Rustral"

[lints]
workspace = true

[features]
default = []
autodiff = ["dep:rustral-autodiff"]

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-symbolic = { path = "../symbolic", version = "0.1.0" }
rustral-autodiff = { path = "../autodiff", optional = true, version = "0.1.0" }
serde.workspace = true
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
anyhow.workspace = true

[[example]]
name = "transformer_bert_encoder"
path = "examples/transformer_bert_encoder.rs"

[[example]]
name = "transformer_gpt_decoder"
path = "examples/transformer_gpt_decoder.rs"

[[example]]
name = "transformer_seq2seq"
path = "examples/transformer_seq2seq.rs"

[[example]]
name = "transformer_composition"
path = "examples/transformer_composition.rs"
