[package]
name = "rustral-onnx-export"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Experimental ONNX export for a tiny subset of Rustral-friendly graphs (Linear / MatMul+Add)"

[lints]
workspace = true

[dependencies]
prost.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
anyhow.workspace = true
