[package]
name = "mnr-optim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

description = "Optimization algorithms for MNR (SGD, Adam, AdamW)"

[dependencies]
mnr-core = { path = "../core" }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mnr-ndarray-backend = { path = "../ndarray-backend" }
