[package]
name = "rustral-optim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

description = "Optimizers (SGD, Adam, AdamW) and mixed-precision helpers for Rustral"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
