[package]
name = "mnr-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
mnr-core = { path = "../core" }
anyhow.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
rayon = { workspace = true, optional = true }
tracing.workspace = true
