[package]
name = "rustral-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Training and inference runtime orchestration for Rustral"

[lints]
workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
tui = ["dep:rustral-tui"]
training = ["dep:rustral-autodiff", "dep:rustral-optim", "dep:rustral-io", "dep:rustral-nn", "dep:rustral-tui"]

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }
rustral-autodiff = { path = "../autodiff", optional = true, version = "0.1.0" }
rustral-io = { path = "../io", optional = true, version = "0.1.0" }
rustral-nn = { path = "../nn", optional = true, version = "0.1.0", features = ["autodiff"] }
rustral-optim = { path = "../optim", optional = true, version = "0.1.0" }
rustral-tui = { path = "../tui", optional = true, version = "0.1.0" }
anyhow.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde_json.workspace = true
rayon = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
rustral-ndarray-backend = { path = "../ndarray-backend", version = "0.1.0" }
rustral-candle-backend = { path = "../candle-backend", version = "0.1.0" }
rustral-data = { path = "../data", version = "0.1.0", features = ["fetch"] }
safetensors = { workspace = true }
bytemuck = { workspace = true }
