[package]
name = "rustral-symbolic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Vocabulary and symbolic dictionaries for NLP-style tasks in Rustral"

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
